# 231-3210_Pishchenyuk

lab1/lab1/: settings.py  urls.py
lab1/mainapp/: views.py
lab1/mainapp/migrations/: 0001_initial.py  0002_book_genre.py
lab2/: docker-compose.yaml
lab2/backend/: Dockerfile
lab2/backend/mainapp/: models.py
lab2/lab2/: .env
lab2/lab2/backend/: requirements.txt
lab2/lab2/backend/lab1/: settings.py  urls.py
lab2/lab2/nginx/: Dockerfile
lab2/lab2/nginx/templates/: default.conf.template
lab3/: CMakeLists.txt  book.cpp  book.h  bookadapter.cpp  bookadapter.h  main.cpp  networkmanager.h
mainapp/: gentestdata.py
